texto de observaciones a constante y estilos

--- a/app/styles/resource/collection-table.scss
+++ b/app/styles/resource/collection-table.scss
@@ -25,7 +25,7 @@
       }
 
       &.col--elastic {
-        max-height: 100%;
+        max-height: initial;
         text-align: justify;
       }
     }
