--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -16,7 +16,7 @@ ion-view(
             .col.col-25 {{ ::('X' + item.cantidad) }}
             .col.col-25 {{ ::(item.provider_item_precio_cents | priceCurrency | currency) }}
           .item.row(ng-if="item.observaciones")
-            .col.col-100.col--elastic {{ ::('OBSERVACIONES : ' + item.observaciones) }}
+            .col.col-100.col--elastic {{ ::( ("order.providerProfile.item.observations" |translate) + item.observaciones) }}
     .resource-collection(ng-if="customerOrderVm.customerOrder.observaciones")
       .list.list-inset.list--no-borders.resource-collection-table
         .row.table-headers
