--- a/app/styles/item/show.scss
+++ b/app/styles/item/show.scss
@@ -93,6 +93,7 @@
       padding: 15px;
       background-color: $light-grey;
       min-height: 60px;
+      font-family: Montserrat-Light;
     }
   }
 }
