--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,6 +42,7 @@
 @import "categories/index";
 @import "categories/show";
 @import "customer/show";
+@import "customer/profile-form";
 @import "item/index";
 @import "item/form";
 @import "item/show";
