--- a/app/templates/profile/addresses/actions.jade
+++ b/app/templates/profile/addresses/actions.jade
@@ -1,7 +1,6 @@
-ion-view(
+ion-view.addresses-wrapper--parent(
   view-title="{{::('profile.tabs.addresses'|translate)}}"
 )
   ion-nav-title
     .alt-logo
-
   ng-include(src="'templates/profile/addresses/form_template.html'")
