--- a/app/templates/profile/profile.jade
+++ b/app/templates/profile/profile.jade
@@ -5,7 +5,6 @@ ion-view(
     .alt-logo
   ion-content.has-header.show-profile-page(
     scroll="false"
-    overflow-scroll="false"
   )
     .row
       .col.profile-header
@@ -18,7 +17,7 @@ ion-view(
       ion-tabs.tabs-top.tabs-striped
         ion-tab(
           title="{{::('profile.tabs.info'|translate)}}"
-          ui-sref="app.profile.info"
+          ui-sref="app.profile.info.index"
         )
           ion-nav-view(name='menuContent@profileInfo')
         ion-tab(
