--- a/app/styles/overrides/bar-header.scss
+++ b/app/styles/overrides/bar-header.scss
@@ -2,6 +2,11 @@
   .back-button {
     margin-left: 0;
   }
+
+  .cart-main-button {
+    font-size: 28px;
+    color: $white;
+  }
 }
 
 .bar-stable.bar.bar-header {
