--- a/app/templates/product/show.jade
+++ b/app/templates/product/show.jade
@@ -3,6 +3,15 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
+
+  //- cart
+  ion-nav-buttons(side="right")
+    button.cart-main-button(
+      ui-sref='app.cart.index'
+      ng-if='menuVm.existCartActive'
+    )
+      i.ion-ios-cart-outline
+
   ion-content.item-show-page
     form(
       name="selectProductForm"
