mapa para crear(geolocalizacion). para editar(referencias)

--- a/app/templates/profile/addresses/form_template.jade
+++ b/app/templates/profile/addresses/form_template.jade
@@ -9,7 +9,7 @@ form(
     .list.list-inset.fields-wrapper
       legend {{::pfaVm.inUpdateMode ? ("profile.addresses.formLegendUpdate"|translate) : ("profile.addresses.formLegendNew"|translate)}}
 
-      maps(data="pfaVm.addressFormData")
+      maps(data="pfaVm.addressFormData" modo-update="pfaVm.inUpdateMode")
 
       label.item.item-input.item-stacked-label(
         ng-class="{'item-error': pfaVm.messages.nombre}"
@@ -28,7 +28,7 @@ form(
         span.input-label {{::("profile.addresses.city"|translate)}}
         input(
           type='text'
-          ng-model='pfaVm.addressFormData.ciudad'
+          ng-model='::pfaVm.addressFormData.ciudad'
         )
       .errors-wrapper
         show-error(array-messages='pfaVm.messages.ciudad')
@@ -61,7 +61,7 @@ form(
         span.input-label {{::("profile.addresses.addressOne"|translate)}}
         input(
           type='text'
-          ng-model='pfaVm.addressFormData.direccion_uno'
+          ng-model='::pfaVm.addressFormData.direccion_uno'
         )
       .errors-wrapper
         show-error(array-messages='pfaVm.messages.direccion_uno')
