--- a/app/templates/product/product.jade
+++ b/app/templates/product/product.jade
@@ -31,7 +31,7 @@ slick-wrapper(settings="productVm.slickConfig")
     toggle-expand="productVm.more"
   )
     button.button.button-clear.button-positive.button-letter-stretched.more-label
-      {{ (productVm.more) ? ("product.less"|translate) : ("product.more"|translate) }}
+      | {{ (productVm.more) ? ("product.less"|translate) : ("product.more"|translate) }}
 
 .list.list-inset
   label.item.item-input.item-stacked-label.observaciones-wrapper
