--- a/app/templates/profile/profile.jade
+++ b/app/templates/profile/profile.jade
@@ -4,7 +4,8 @@ ion-view(
   ion-nav-title
     .alt-logo
   ion-content.has-header.show-profile-page(
-    scroll="false"
+    overflow-scroll="true"
+    locking="false"
   )
     .row
       .col.profile-header
