Corrección de vistas de acuerdo al estilo que se esta manejando

--- a/app/templates/wishlist/edit.jade
+++ b/app/templates/wishlist/edit.jade
@@ -1,24 +1,30 @@
-ion-modal-view.wishlist-page
-  ion-header-bar.bar.bar-header.bar-light.bar-wishlist-header(
-    align-title="center"
-  )
-    .title {{::("wishlist.titleEdit"|translate)}}
-    .buttons
-      button.button.ion-close.button-clear(
+ion-modal-view
+  ion-header-bar.bar-stable.bar.bar-header
+    .title.alt-logo
+    .ion-nav-buttons.buttons(side="primary")
+      button.button.button-clear.button-positive(
         ng-click="wishlistsVm.closeModal()"
-      )
-  ion-content
-    .resource-form
-      form(name="form" novalidate)
+      ) {{::('globals.cancel'|translate)}}
+
+  form(
+    name='wishlistsVm.form'
+    ng-submit='wishlistsVm.runAction(wishlistsVm.actions.edit)'
+    novalidate)
+
+    ion-content.resource-form.wishlist-page
+      .list.list-inset
+        legend.title {{::("wishlist.titleEdit"|translate)}}
+
         div(ng-include="'templates/wishlist/form.html'")
 
-  ion-footer-bar.footer-wishlist-container
-    action-button(
-      on-click="wishlistsVm.runAction(wishlistsVm.actions.edit)"
-      text="{{::('wishlist.save'|translate)}}"
-    )
-    action-button(
-      on-click="wishlistsVm.runAction(wishlistsVm.actions.remove)"
-      text="{{::('wishlist.remove'|translate)}}"
-      color="red"
-    )
+    .bar.bar-footer.text-center.footer-wishlist-container
+      .col
+        button.button.button-small.button-outline.button-energized(
+          type="submit"
+          ng-disabled="wishlistsVm.form.$invalid"
+        ) {{::('wishlist.save'|translate)}}
+      .col
+        button.button.button-small.button-outline.button-assertive(
+          type='button'
+          ng-click="wishlistsVm.runAction(wishlistsVm.actions.remove)"
+        ) {{::('wishlist.remove'|translate)}}
