--- a/app/templates/wishlist/new.jade
+++ b/app/templates/wishlist/new.jade
@@ -1,23 +1,24 @@
-ion-modal-view.wishlist-page
-  ion-header-bar.bar.bar-header.bar-light.bar-wishlist-header(
-    align-title="center"
-  )
-    .title {{::("wishlist.titleNew"|translate)}}
-    .buttons
-      button.button.ion-close.button-clear(
+ion-modal-view
+  ion-header-bar.bar-stable.bar.bar-header
+    .title.alt-logo
+    .ion-nav-buttons.buttons(side="primary")
+      button.button.button-clear.button-positive(
         ng-click="wishlistsVm.closeModal()"
-      )
-  ion-content
-    .resource-form
-      form(name="form" novalidate)
+      ) {{::('globals.cancel'|translate)}}
+
+  form(
+    name='wishlistsVm.form'
+    ng-submit='wishlistsVm.runAction(wishlistsVm.actions.new)'
+    novalidate)
+
+    ion-content.resource-form.wishlist-page
+      .list.list-inset
+        legend.title {{::("wishlist.titleNew"|translate|uppercase)}}
+
         div(ng-include="'templates/wishlist/form.html'")
-        .bar.bar-footer.footer-wishlist-container
-          action-button(
-            on-click="wishlistsVm.runAction(wishlistsVm.actions.new)"
-            text="{{::('wishlist.save'|translate)}}"
-          )
-          action-button(
-            on-click="wishlistsVm.runAction(wishlistsVm.actions.cancel)"
-            text="{{::('globals.cancel'|translate)}}"
-            color="red"
-          )
+
+    .bar.bar-footer
+      button.button.button-small.button-outline.button-energized(
+        type="submit"
+        ng-disabled="wishlistsVm.form.$invalid"
+        ) {{::('wishlist.save'|translate)}}
