--- a/app/templates/wishlist/wishlists.jade
+++ b/app/templates/wishlist/wishlists.jade
@@ -3,7 +3,8 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content.wishlist-page
+
+  ion-content.resource-collection
     .row
       label.search-input
         i.icon.ion-search.placeholder-icon
@@ -12,21 +13,25 @@ ion-view(
           type="text"
           placeholder='{{::("wishlist.searchBox"|translate)}}'
         )
-    .row.footer-wishlist-container
-      action-button(
-        on-click="wishlistsVm.showModal(wishlistsVm.modalSettings.newWishlist)"
-        text="{{::('wishlist.new'|translate)}}")
-    .row.list-header
-      .col.list-title {{::("wishlist.id"|translate)}}
-      .col.col-50.list-title {{::("wishlist.name"|translate)}}
-      .col.col-33
-    .row.list-content(
-      ng-repeat="wlist in wishlistsVm.wishlists | filter:wishlistsVm.query"
-    )
-      .col.list-item {{ wlist.id }}
-      .col.col-50.list-item {{ wlist.nombre }}
-      .col.col-33.col-wishlist-edit
-        link-button(
-          on-click="wishlistsVm.showEditModal(wlist, $index)"
-          text="{{::('wishlist.edit'|translate)}}"
-        )
+
+    .row
+      .list.list--centered
+        button.button.button-outline.button-energized(
+          ng-click="wishlistsVm.showModal(wishlistsVm.modalSettings.newWishlist)"
+          ) {{::('wishlist.new'|translate)}}
+
+    .list.list-inset.list--no-borders.resource-collection-table
+      .row.table-headers
+        .col.col-10 {{::("wishlist.id"|translate)}}
+        .col.col-75 {{::("wishlist.name"|translate)}}
+        .col
+
+      .item.row(
+        ng-repeat="wlist in wishlistsVm.wishlists | filter:wishlistsVm.query"
+      )
+        .col.col-10 {{ wlist.id }}
+        .col.col-75 {{ wlist.nombre }}
+        .col
+          a.button.button-clear.button-positive.button-small(
+            ng-click="wishlistsVm.showEditModal(wlist, $index)"
+          ) {{::('wishlist.edit'|translate)}}
