tweaking cart with changes in API delivery addresses

--- a/app/styles/cart/cart.scss
+++ b/app/styles/cart/cart.scss
@@ -31,9 +31,10 @@
     letter-spacing: -0.5px;
     position: relative;
     padding-right: 70px; // room for btn
+    letter-spacing: -0.5px;
 
-    span {
-      margin-right: 5px;
+    span:not(:last-child) {
+      margin-right: 3px;
     }
 
     .placeholder-title {
@@ -52,29 +53,28 @@
   .provider-profile-section {
     margin-bottom: 20px;
 
-    .provider-profile--title,
-    .provider-profile--subtitle {
+    .provider-profile--title-wrapper {
       padding: 15px;
+      background-color: $white;
+      letter-spacing: -0.5px;
+      line-height: 20px;
     }
 
     .provider-profile--title {
       color: $base-yellow;
-      background-color: $white;
       text-transform: uppercase;
       font-size: 14px;
       font-family: Montserrat-Regular;
     }
 
     .provider-profile--subtitle {
-      color: $grey-secondary;
+      float: right;
+      color: $positive;
       font-family: Montserrat-Regular;
       font-size: 13px;
-      line-height: 13px;
-      padding-top: 10px;
-      padding-bottom: 10px;
 
-      span {
-        margin-right: 5px;
+      span:not(:last-child) {
+        margin-right: 3px;
       }
     }
   }
