--- a/app/templates/cart/checkout.jade
+++ b/app/templates/cart/checkout.jade
@@ -14,27 +14,28 @@ ion-modal-view.cart-page
   )
     ion-content.resource-form.checkout-form
       .list.list-inset
-        label.item.item-input.item-input--no-borders.item-stacked-label
-          span.input-label {{::("globals.dateDelivery"|translate)}}
-        .delivery-time-wrapper
-          ion-datetime-picker.item.item-icon-left.datetime-picker(
-            date
-            time
-            am-pm
-            only-valid="{'after': 'today', 'inclusive': true}"
-            ng-model='cartVm.checkoutForm.deliver_at'
-          )
-            i.icon.ion-ios-calendar-outline
-            span.placeholder(ng-if="!cartVm.checkoutForm.deliver_at")
-              | {{ ::('cart.deliverNow' | translate) }}
-            span(ng-if="cartVm.checkoutForm.deliver_at")
-              | {{ cartVm.checkoutForm.deliver_at | formatDate }}
-          .button.button-clear.button-positive.button-small(
-            ng-if="cartVm.checkoutForm.deliver_at"
-            ng-click="cartVm.clearDeliveryTime()"
-          ) {{ ::('cart.deliverNow' | translate) }}
-        .errors-wrapper
-          show-error(array-messages="cartVm.messages.deliver_at")
+        //- not here anymore
+          label.item.item-input.item-input--no-borders.item-stacked-label
+            span.input-label {{::("globals.dateDelivery"|translate)}}
+          .delivery-time-wrapper
+            ion-datetime-picker.item.item-icon-left.datetime-picker(
+              date
+              time
+              am-pm
+              only-valid="{'after': 'today', 'inclusive': true}"
+              ng-model='cartVm.checkoutForm.deliver_at'
+            )
+              i.icon.ion-ios-calendar-outline
+              span.placeholder(ng-if="!cartVm.checkoutForm.deliver_at")
+                | {{ ::('cart.deliverNow' | translate) }}
+              span(ng-if="cartVm.checkoutForm.deliver_at")
+                | {{ cartVm.checkoutForm.deliver_at | formatDate }}
+            .button.button-clear.button-positive.button-small(
+              ng-if="cartVm.checkoutForm.deliver_at"
+              ng-click="cartVm.clearDeliveryTime()"
+            ) {{ ::('cart.deliverNow' | translate) }}
+          .errors-wrapper
+            show-error(array-messages="cartVm.messages.deliver_at")
 
         label.item.item-input.item-stacked-label
           span.input-label {{::("cart.observations"|translate)}}
@@ -54,30 +55,31 @@ ion-modal-view.cart-page
         .errors-wrapper
           show-error(array-messages='cartVm.messages.forma_de_pago')
 
-        label.item.item-input.item-select
-          span.input-label {{::("cart.deliveryMethod"|translate)}}
-          select(
-            ng-model='cartVm.checkoutForm.delivery_method'
-            ng-options="method.value as method.label for method in cartVm.formattedDeliveryMethods track by method.value")
-        .errors-wrapper
-          show-error(array-messages='cartVm.messages.delivery_method')
+        //- not here anymore
+          label.item.item-input.item-select
+            span.input-label {{::("cart.deliveryMethod"|translate)}}
+            select(
+              ng-model='cartVm.checkoutForm.delivery_method'
+              ng-options="method.value as method.label for method in cartVm.formattedDeliveryMethods track by method.value")
+          .errors-wrapper
+            show-error(array-messages='cartVm.messages.delivery_method')
 
-        .wrapper(
-          ng-if="cartVm.checkoutForm.delivery_method === 'shipping'"
+          .wrapper(
+            ng-if="cartVm.checkoutForm.delivery_method === 'shipping'"
           )
-          label.item.item-input.item-input--no-borders.item-stacked-label.select-list-label(
-            ng-class="{'item-error': cartVm.messages.customer_address_id}"
-          )
-            span.input-label {{::("cart.deliveryAddress"|translate)}}
-          ion-list
-            ion-item.select-list-item(
-                ng-repeat="address in cartVm.addresses track by $index"
-                ng-click="cartVm.assignAddress(address)"
-                ng-class="{'selected': address.selected}"
+            label.item.item-input.item-input--no-borders.item-stacked-label.select-list-label(
+              ng-class="{'item-error': cartVm.messages.customer_address_id}"
             )
-              i.ion-android-checkmark-circle
-              span {{ address.nombre }} ({{ address.direccion_uno }})
-          show-error(array-messages='cartVm.messages.customer_address_id')
+              span.input-label {{::("cart.deliveryAddress"|translate)}}
+            ion-list
+              ion-item.select-list-item(
+                  ng-repeat="address in cartVm.addresses track by $index"
+                  ng-click="cartVm.assignAddress(address)"
+                  ng-class="{'selected': address.selected}"
+              )
+                i.ion-android-checkmark-circle
+                span {{ address.nombre }} ({{ address.direccion_uno }})
+            show-error(array-messages='cartVm.messages.customer_address_id')
 
         label.item.item-input.item-input--no-borders.item-stacked-label.select-list-label(
           ng-class="{'item-error': cartVm.messages.customer_billing_address_id}"
