--- a/app/templates/profile/addresses/form_template.jade
+++ b/app/templates/profile/addresses/form_template.jade
@@ -11,7 +11,7 @@ form(
 
       maps(
         lat="pfaVm.addressFormData.latitud" lng="pfaVm.addressFormData.longitud"
-        default-in-current-geolocation="pfaVm.addressFormData.defaultInCurrentGeolocation"
+        default-in-current-geolocation="pfaVm.defaultInCurrentGeolocation"
         direccion="pfaVm.addressFormData.direccion_uno" ciudad="pfaVm.addressFormData.ciudad"
       )
       show-error(array-messages='pfaVm.messages.coords')
