--- a/app/templates/directives/maps/maps.jade
+++ b/app/templates/directives/maps/maps.jade
@@ -1,12 +1,5 @@
 .map-view
-  input(
-    id="input-places"
-    class="controls"
-    type="text"
-    placeholder="Introduzca una ubicación"
-    ng-autocomplete
-    ng-focus="mapVm.disableTap()"
-  )
+  places-search-box(ng-if="mapVm.map" map="mapVm.map" markers="mapVm.markers" data-tap-disabled="true")
   div(
     id="map"
     data-tap-disabled="true"
