propiedades actualizadas usando eventos auth

--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -10,7 +10,7 @@ ion-side-menus(enable-menu-with-back-views='false')
     ion-content
       ion-list
         ion-item(menu-close='' class='menu-header')
-          | {{siteVm.userName()}}
+          | {{ siteVm.userName }}
         ion-item(menu-close='' ui-sref='app.profile.info')
           | {{::("menu.profile"|translate)}}
         ion-item(menu-close='' ui-sref='app.cart.index' ng-if='menuVm.existCartActive')
