--- a/app/templates/profile/profile.jade
+++ b/app/templates/profile/profile.jade
@@ -9,9 +9,9 @@ ion-view(
     .row
       .col.profile-header
         img.img-profile(
-          ng-src="{{ siteVm.getUserImageURL() }}"
+          ng-src="{{ siteVm.userImageURL }}"
         )
-        .user-name {{ siteVm.userName() }}
+        .user-name {{ siteVm.userName }}
 
     .profile-body
       ion-tabs.tabs-top.tabs-striped
