vista de pedido con billing address (#191)
* billing address

* vat en pedido

* ocultando nulos

* address lines en propiedades

* direccion nombre en template

* usar nuevo enpoint en getaddress

* spec get address

* specs get address

* forma de pago  y get address con common service

--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -29,19 +29,19 @@ ion-view(
           .col.col-75
             | {{ ::("order.summary.shippingCosts" |translate) }}
           .col.col-25
-            | {{ ::( '1000' | priceCurrency | currency ) }}
+            | {{ ::( '0' | priceCurrency | currency ) }}
         .row.item
           .col.col-75
-            | {{ ::("order.summary.VAT" |translate) }}
+            | {{ ::( (customerOrderVm.VAT*100) + ("order.summary.VAT" |translate) ) }}
           .col.col-25
-            | {{ ::( '500' | priceCurrency | currency ) }}
+            | {{ ::( customerOrderVm.customerOrder.subtotalVATCents | priceCurrency | currency ) }}
         .row.table-headers
           .col.col-100
         .row.item
           .col.col-75
             | {{ ::("order.summary.total" |translate) }}
           .col.col-25
-            | {{ ::( '5000' | priceCurrency | currency ) }}
+            | {{ ::( customerOrderVm.customerOrder.totalCents | priceCurrency | currency ) }}
 
     //- not implemented yet
       .resource-collection
@@ -61,15 +61,21 @@ ion-view(
           .col.col-100.col--elastic {{ ::customerOrderVm.customerOrder.observaciones }}
           .list.list-inset.list--no-borders.resource-collection-table
 
-    .resource-collection(ng-if="customerOrderVm.customerAddress")
+    .resource-collection
       .list.list-inset.list--no-borders.resource-collection-table
         .row.table-headers
           .col.col-100 {{ ::("order.customerInfo"|translate) }}
-        .row.item
-          .col.col-100 {{ 'SEBASTIAN LOPEZ' }}
-        .row.item
-          .col.col-100 {{ ::( customerOrderVm.customerAddress.parroquia + ', ' + customerOrderVm.customerAddress.barrio ) }}
-        .row.item
-          .col.col-100 {{ ::( customerOrderVm.customerAddress.ciudad + ', ' + customerOrderVm.customerAddress.codigo_postal ) }}
-        .row.item
-          .col.col-100 {{ 'VISA ***********1234' }}
+        .row.item(ng-if="customerOrderVm.customerAddress.nombre")
+          .col.col-100 {{ ::( customerOrderVm.customerAddress.nombre ) }}
+        .row.item(ng-if="customerOrderVm.addressLine1")
+          .col.col-100 {{ ::( customerOrderVm.addressLine1 ) }}
+        .row.item(ng-if="customerOrderVm.addressLine2")
+          .col.col-100 {{ ::( customerOrderVm.addressLine2 ) }}
+        .row.item(ng-if="customerOrderVm.customerOrder.forma_de_pago")
+          .col.col-100 {{ ::( customerOrderVm.customerOrder.forma_de_pago ) }}
+        .row.item(ng-if="customerOrderVm.customerBillingAddress.direccion")
+          .col.col-100
+            {{ ::( customerOrderVm.customerBillingAddress.direccion ) }}
+        .row.item(ng-if="customerOrderVm.customerBillingAddress.ciudad")
+          .col.col-100
+            {{ ::( customerOrderVm.customerBillingAddress.ciudad ) }}
